--- a/static/styles/about.scss
+++ b/static/styles/about.scss
@@ -1,5 +1,5 @@
 .about {
-  background: #090909;
+  background-color: #212121;
   border-radius: 8px;
   margin: 4rem 2rem;
   padding: 3rem 2rem;
@@ -21,7 +21,7 @@
     padding: 2rem;
 
     h4 {
-      color: #ffc000;
+      color: #ff9900;
     }
   }
 
@@ -29,7 +29,7 @@
     font-size: 20px;
 
     a {
-      color: #ffc000;
+      color: #ff9900;
       font-weight: bold;
       text-decoration: none;
 
