--- a/templates/results.html
+++ b/templates/results.html
@@ -15,7 +15,7 @@
       <p><b>Especificidad:</b>&nbsp;{{res[2]}}</p>
       <p><b>Valor predictivo positivo:</b>&nbsp;{{res[3]}}</p>
       <p><b>Valor predictivo negativo:</b>&nbsp;{{res[4]}}</p>
-      <p>Nota: Valores calculados respecto al dignóstico de covid19</p>
+      <p>Nota: Valores calculados con respecto al COVID-19</p>
     </div>
   {% endif %}
   <br>
