--- a/static/styles/results.scss
+++ b/static/styles/results.scss
@@ -1,7 +1,7 @@
 .results {
   &__details {
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px solid grey;
+    background-color: #545454;
+    border: 1px solid #999;
     border-radius: 16px;
     font-size: 20px;
     margin: auto;
@@ -18,14 +18,14 @@
 
   &__separator {
     height: 1px;
-    background-color: #ffc000;
+    background-color: #ff9900;
     width: 90%;
     margin: 3rem auto;
   }
 
   &__card {
-    background-color: rgba(255, 255, 255, 0.1);
-    border: 1px solid grey;
+    background-color: #545454;
+    border: 1px solid #999;
     border-radius: 16px;
     width: 70%;
     margin: auto;
