--- a/static/styles/training.scss
+++ b/static/styles/training.scss
@@ -14,8 +14,8 @@
   }
 
   &__container {
-    background: rgba(255, 255, 255, 0.1);
-    border: 1px solid #ffc000;
+    background-color: #454545;
+    border: 1px solid #ff9900;
     border-radius: 4px;
     padding: 1rem;
   }
@@ -26,14 +26,13 @@
   }
 
   &__images {
-    background-color: black;
-    border: 1px solid grey;
+    border: 1px solid #999;
     border-radius: 4px;
     margin: 0.75rem;
     width: 65%;
 
     img {
-      border: 1px solid grey;
+      border: 1px solid #999;
       border-radius: 4px;
       width:100%;
       height:100%;
