--- a/templates/snippets/home-button/home-button.scss
+++ b/templates/snippets/home-button/home-button.scss
@@ -1,8 +1,9 @@
 .home-button {
   background-color: rgba(0,0,0,0);
   border: none;
-  color: whitesmoke;
+  color: #fff;
   cursor: pointer;
+  font-family: Calibri, sans-serif;
   font-size: 1.5rem;
   left: 0.5rem;
   outline: none;
@@ -17,16 +18,16 @@
   svg path,
   svg polygon,
   svg rect {
-    fill: whitesmoke;
+    fill: #fff;
   }
 
   &:hover {
-    color: #ffc000;
+    color: #ff9900;
 
     svg path,
     svg polygon,
     svg rect {
-      fill: #ffc000;
+      fill: #ff9900;
     }
   }
 }
