--- a/templates/start.html
+++ b/templates/start.html
@@ -8,12 +8,7 @@
 {% block content %}
 {% include "snippets/back-button/back-button.html" %}
   <div class="content start">
-    <div class="start__avatar">
-      <img
-        src="{{ url_for('static',filename='assets/logo.png') }}"
-        alt="Covid-19 Avatar"
-      >
-    </div>
+    {% include "snippets/avatar/avatar.html" %}
     <h2>Bienvenido a COVID-19 Training</h2>
 
     Por favor, selecciona tu especialidad para continuar:
