--- a/templates/about.html
+++ b/templates/about.html
@@ -21,7 +21,7 @@
     <div class="about__column">
       <h4>Dedicado a ...</h4>
   
-      <p class="about__paragraph">Dedicado a todos los profesionales del <a href="http://www.humv.es/index.html" target="_blank">Hospital Universitario Marqués de Valdecilla</a> y del resto de instituciones sanitarias, que de manera ejemplar han luchado desde el comienzo de esta pandemia por salvaguardar la salud y la vida de todos. Gracias al personal médico y de enfermería de los servicios de urgencias, de intensivos y de las plantas COVID-19; gracias a los radiólogos, técnicos y pacientes de los servicios de radiodiagnóstico; gracias al personal de limpieza, seguridad y mantenimiento; y a todos aquellos implicados de manera directa o indirecta en esta crisis sanitaria.</p>
+      <p class="about__paragraph">Dedicado a todos los profesionales del <a href="http://www.humv.es" target="_blank">Hospital Universitario Marqués de Valdecilla</a> y del resto de instituciones sanitarias, que de manera ejemplar han luchado desde el comienzo de esta pandemia por salvaguardar la salud y la vida de todos. Gracias al personal médico y de enfermería de los servicios de urgencias, de intensivos y de las plantas COVID-19; gracias a los radiólogos, técnicos y pacientes de los servicios de radiodiagnóstico; gracias al personal de limpieza, seguridad y mantenimiento; y a todos aquellos implicados de manera directa o indirecta en esta crisis sanitaria.</p>
     </div>
   </div>
 </div>
