indicar que las imagenes son distintas a cada vez

--- a/templates/results.html
+++ b/templates/results.html
@@ -19,7 +19,7 @@
     </div>
   {% endif %}
   <br>
-  <p>¿Quieres intentarlo de nuevo?</p>
+  <p>¿Quieres intentarlo otra vez con nuevas imágenes?</p>
 
   <div class="results__try-again" >
     <button
