--- a/templates/snippets/footer/footer.html
+++ b/templates/snippets/footer/footer.html
@@ -1,8 +1,21 @@
-<div class="footer">
+<footer class="footer">
   {% block footer %}
-  <a href="/about">Acerca de este proyecto y su finalidad</a>
-   | <a href="https://api.cloud.ifca.es:8080/swift/v1/covid19/AVISO%20LEGAL%20Y%20POLI%C3%ACTICA%20DE%20PRIVACIDAD.pdf" target="_blank">Términos y condiciones de uso</a>
-   | <a href="mailto:covid19training@ifca.unican.es">Contacta con nosotros</a>
-   | Copyright &copy; IFCA - CSIC - HUMV
+  <a
+    class="footer__link"
+    href="/about"
+  >Acerca de este proyecto y su finalidad</a>
+  <p class="footer__separator">&nbsp;&nbsp;|&nbsp;&nbsp;</p>
+  <a
+    class="footer__link"
+    href="https://api.cloud.ifca.es:8080/swift/v1/covid19/AVISO%20LEGAL%20Y%20POLI%C3%ACTICA%20DE%20PRIVACIDAD.pdf"
+    target="_blank"
+  >Términos y condiciones de uso</a>
+  <p class="footer__separator">&nbsp;&nbsp;|&nbsp;&nbsp;</p>
+  <a
+    class="footer__link"
+    href="mailto:covid19training@ifca.unican.es"
+  >Contacta con nosotros</a>
+  <p class="footer__separator">&nbsp;&nbsp;|&nbsp;&nbsp;</p>
+  <p class="footer__copyright">Copyright &copy; IFCA - CSIC - HUMV</p>
   {% endblock %}
-</div>
+</footer>
