--- a/templates/snippets/footer/footer.scss
+++ b/templates/snippets/footer/footer.scss
@@ -1,16 +1,42 @@
 .footer {
+  display: flex;
   font-family: Calibri, sans-serif;
   font-size: 16px;
   height: 2rem;
+  justify-content: center;
   margin-top: auto;
   width: 100%;
-  a {
+
+  &__link {
     color: #fff;
     text-decoration: none;
 
     &:hover {
       color: #ff9900;
       text-decoration: underline;
+    }
+  }
+
+  &__separator, &__copyright {
+    margin: 0;
+  }
+}
+
+@media (max-width: 800px) {
+  .footer {
+    flex-direction: column;
+    height: 6rem;
+
+    &__separator {
+      display: none;
+    }
+
+    &__link {
+      margin: 0.25rem;
+    }
+
+    &__copyright {
+      margin: 0.25rem 0 0.75rem;
     }
   }
 }
