--- a/templates/snippets/back-button/back-button.html
+++ b/templates/snippets/back-button/back-button.html
@@ -1,6 +1,8 @@
-<button class="back-button" onclick="javascript:history.back()">
-  <svg>
-    <polygon points="8 11 23 11 23 13 8 13.0032349 13.4439 19.5297864 11.643033 21.0733867 3.86584444 12 11.643033 2.92661331 13.4439 4.47021357"/>
-  </svg>
-  &nbsp;Volver
-</button>
+<div class="back-button__wrapper">
+  <button class="back-button" onclick="javascript:history.back()">
+    <svg>
+      <polygon points="8 11 23 11 23 13 8 13.0032349 13.4439 19.5297864 11.643033 21.0733867 3.86584444 12 11.643033 2.92661331 13.4439 4.47021357"/>
+    </svg>
+    &nbsp;Volver
+  </button>
+</div>
