--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://www.jose-aguilar.com/scripts/jquery/zoomy/zoomy.css"/>
     <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='assets/favicon.ico') }}"/>
     <title>{% block title %}{% endblock %} - Covid-19 Training</title>
+    <meta name="viewport" content="width=device-width">
     <meta charset="UTF-8"/>
     {% endblock %}
   </head>
