--- a/templates/snippets/back-button/back-button.scss
+++ b/templates/snippets/back-button/back-button.scss
@@ -3,7 +3,7 @@
   border: none;
   color: #fff;
   cursor: pointer;
-  font-family: Calibri, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 1.5rem;
   margin-left: 0.5rem;
   outline: none;
