--- a/templates/snippets/footer/footer.scss
+++ b/templates/snippets/footer/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   display: flex;
-  font-family: Calibri, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
   height: 2rem;
   justify-content: center;
